--- a/res/xml/doze_settings.xml
+++ b/res/xml/doze_settings.xml
@@ -19,16 +19,16 @@
     android:title="@string/ambient_display_title"
     xmlns:settings="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory
+    <!-- <PreferenceCategory
         android:key="doze_elements"
-        android:title="@string/doze_elements_title" >
+        android:title="@string/doze_elements_title" > -->
 
-        <com.lighthouse.settings.preference.SystemSettingSwitchPreference
+        <!-- <com.lighthouse.settings.preference.SystemSettingSwitchPreference
             android:key="ambient_battery_percent"
             android:title="@string/ambient_battery_percent_title"
             android:summary="@string/ambient_battery_percent_summary"
             android:defaultValue="true" />
-    </PreferenceCategory>
+    </PreferenceCategory> -->
 
     <PreferenceCategory
         android:key="doze_trigger_key"
@@ -57,12 +57,12 @@
             android:title="@string/ambient_display_notifications"
             android:summary="@string/ambient_display_summary" />
 
-        <com.lighthouse.settings.preference.SystemSettingSwitchPreference
+        <!-- <com.lighthouse.settings.preference.SystemSettingSwitchPreference
             android:key="pulse_on_new_tracks"
             android:defaultValue="true"
             android:title="@string/pulse_on_new_tracks_title"
             android:summary="@string/pulse_on_new_tracks_summary" />
-    </PreferenceCategory>
+    </PreferenceCategory> -->
 
     <PreferenceCategory
         android:key="gestures"
