CustomDoze: Resolve typo

--- a/res/xml/doze_settings.xml
+++ b/res/xml/doze_settings.xml
@@ -61,8 +61,8 @@
             android:key="pulse_on_new_tracks"
             android:defaultValue="true"
             android:title="@string/pulse_on_new_tracks_title"
-            android:summary="@string/pulse_on_new_tracks_summary" />
-    </PreferenceCategory> -->
+            android:summary="@string/pulse_on_new_tracks_summary" /> -->
+    </PreferenceCategory> 
 
     <PreferenceCategory
         android:key="gestures"
